# fathomnet-voxel51

./: .gitignore  CLAUDE.md  GCLOUD.md  README.md  pyproject.toml
data/: dataset_test.json
fathomnet-voxel51/: check_gcp_auth.py  download_data.py  ingest_dataset.py  load_data_gcp.py
fathomnet_voxel51/: download_data.py  ingest_dataset.py  load_data_gcp.py
notebooks/: 01_load_data_gcp.ipynb  02_ingest_dataset.ipynb
